# cmake-tutorial

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt
include/mylib/: random.h
lib/: CMakeLists.txt  random.cpp
tool/: CMakeLists.txt  main.cpp
